 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2468: Speed up TestBuiltin (dvryaboy)

PIG-2467: Speed up TestCommit (dvryaboy)

PIG-2460: Use guava 11 instead of r06 (dvryaboy)

PIG-2267: Make the name of the columns in schema optional (jcoveney via daijy)

PIG-2453: Fetching schema can be very slow for multi-thousand file LOADs (dvryaboy)

PIG-2443: [Piggybank] Add UDFs to check if a String is an Integer And if a String is Numeric (prkommireddi via daijy)

PIG-2437: Use Ivy to get automaton.jar (azaroth)

PIG-2448: Convert more tests to use LOCAL mode (dvryaboy)

PIG-2438: Do not hardcode commons-lang version in build.xml (azaroth)

PIG-2422: Add log messages for Jython schema definitions (vivekp via gates)

PIG-2403: Reduce code duplication in SUM, MAX, MIN udfs (dvryaboy)

PIG-2245: Add end to end test for tokenize (markroddy via gates)

PIG-2327: bin/pig doesn't have any hooks for picking up ZK installation deployed from tarballs (rvs via hashutosh)

PIG-2382: Modify .gitignore to ignore pig-withouthadoop.jar (azaroth via hashutosh)

PIG-2380: Expose version information more cleanly (jcoveney via azaroth)

PIG-2311: STRSPLIT needs to allow bytearray arguments (xuting via olgan)

PIG-2365: Current TOP implementation needlessly results in a null bag name (jcoveney via dvryaboy) 

PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES
