@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2282: Automatically update Eclipse .classpath file when new libs are added to the classpath through Ivy (azaroth via daijy)
+
 PIG-2468: Speed up TestBuiltin (dvryaboy)
 
 PIG-2467: Speed up TestCommit (dvryaboy)
